--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ img {
 
 #banner {
 
-   background-image:url('Alonaki/alonaki4.jpg');
+   background-image:url('alonaki/alonaki4.jpg');
    background-repeat:no-repeat;
    background-size:cover;
    background-position:bottom;
